<resources>
    <string name="app_name">DMRC Attendance</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_con_password">Confirm Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up_text">New user? Sign up</string>
    <string name="user_reg">User Registration</string>
    <string name="emp_name">Name</string>
    <string name="emp_username">Username</string>
    <string name="register_button">Register</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="report_text">Your Report</string>
    <string name="text_input">Add text here</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>
    <string name="report">Report</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="dmrc">Delhi Metro Rail Corporation</string>
    <string name="remember">Remember Me</string>
    <string name="emp_email">Email</string>
    <string name="forget_pass">Forget Password?</string>
    <string name="welcome_text">Welcome!</string>
    <string name="emp">Name:</string>
    <string name="dept">Department:</string>
    <string name="supervisor">Supervisor(s):</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
