<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:context="com.example.android.splash.LoginActivity">

        <TextView
            android:id="@+id/login_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="70dp">

            <TextView
                android:id="@+id/txtview1_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/prompt_username"
                android:textColor="@color/textColor"

                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtview1_login"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:theme="@style/RedCheck" />

            <TextView
                android:id="@+id/txtview2_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/username_login"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/prompt_password"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtview2_login"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:theme="@style/RedCheck" />

            <CheckBox
                android:id="@+id/saveLoginCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/password_login"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/remember"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                android:theme="@style/RedCheck"
                android:checked="false" />


            <TextView
                android:id="@+id/forget_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/saveLoginCheckBox"
                android:layout_marginTop="14dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/forget_pass"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"


                />

            <Button
                android:id="@+id/login_button"
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forget_pass"
                android:layout_marginTop="35dp"
                android:background="@drawable/button_selector"
                android:text="@string/login_button"
                android:textColor="@color/textColor"
                android:textStyle="bold" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sign_up_text"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:textSize="18sp"

                />


        </RelativeLayout>
    </LinearLayout>
</ScrollView>