<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.splash.HomeFrag">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fillViewport="true"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_txt"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/emp"
            android:textColor="@color/textColor"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/name_fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_txt"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/name"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/default_color"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/dept_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/dept"
            android:textColor="@color/textColor"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/dept_fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_fill"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/dept_name"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/default_color"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/super_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dept_name"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/supervisor"
            android:textColor="@color/textColor"
            android:textSize="24sp" />

        <ListView
            android:id="@+id/list"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/super_name"
            android:foregroundGravity="right"


            >


        </ListView>

        </RelativeLayout>

</ScrollView>

</FrameLayout>
